apps/stats-server/overlays/dev/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stats-server-middleware
  namespace: dev
spec:
  stripPrefix:
    prefixes:
      - /api/v1/dev/stats
