apps/stats-server/overlays/dev/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stats-server-route
  namespace: dev
spec:
  entryPoints:
    - websecure  # HTTPS
  routes:
    # stats Server API
    - match: Host(`tickget.kr`) && PathPrefix(`/api/v1/dev/stats`)
      kind: Rule
      priority: 200
      services:
        - name: stats-server-service
          port: 80
          namespace: dev
      middlewares:
        - name: auth-middleware
          namespace: dev
        - name: stats-server-middleware
          namespace: dev

  # TLS (HTTPS) 설정
  tls:
    secretName: tickget-kr-tls
